--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:ghpages": "cross-env DEPLOY_ENV=gh-pages vite build",
+    "deploy:ghpages": "npm run build:ghpages && gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -20,9 +22,11 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "unocss": "^66.1.2",
     "vite": "^6.3.5"
